# FastLSQ

./: .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  linear_fastlsq.py  nonlinear_fastlsq.py  pyproject.toml  requirements.txt
benchmarks/: extended_baselines.py  generalization_study.py  isotime_comparison.py  run_all.py
benchmarks/results/: extended_baselines.csv
examples/: add_your_own_pde.py  benchmark_comparison.py  custom_features.py  grad_shafranov.py  grid_inverse.py  grid_rl_control.py  grid_swing.py  gs_inverse.py  gs_rl_control.py  integro_differential_demo.py  inverse_heat_source.py  inverse_magnetostatics.py  inverse_source_position.py  learnable_helmholtz.py  memory_diffusion.py  orbit_hill.py  orbit_inverse.py  orbit_rl.py  pde_discovery.py  rlc_integro_differential.py  run_all_extensions.py  run_linear.py  run_nonlinear.py  tutorial_basic.py  tutorial_nonlinear.py  vector_basis_stream_vorticity.py
examples/extras/: fred_sde.py  fred_sde_fastlsq.py  gaia_potential.py  gaia_potential_fastlsq.py  horizons_ephemeris.py  numerai_alpha.py  numerai_alpha_fastlsq.py  run_all_fastlsq.py  spectral_expansion.py
examples/extras/scenarios/: _alsu_lattice.py  _common.py  run_all.py  s01_beamloss_ode.py  s01_betatron_tune.py  s01_green_fff.py  s01_hill_ivp.py  s01_observe_fit_act_simulator.py  s01_orbit_inverse.py  s01_passive_loco.py  s01_perturbed_hill.py  s01_sofb_observe_fit_act.py  s01_streaming_archive_growth.py  s01_synchrotron_ode.py  s01_tides_3months.py  s01_topoff_impulse.py  s01_visualize.py  s02_plasma_wakefield.py  s03_synchrobetatron.py  s04_sunspots.py  s05_helioseismology.py  s06_tides.py  s07_iers_earth_rotation.py  s08_mauna_loa_co2.py  s09_enso_qbo.py  s10_pulsar_timing.py  s11_modal_analysis.py  s12_mems_resonator.py  s13_variable_stars_kepler.py  s14_eeg.py  s15_circadian.py
fastlsq/: __init__.py  api.py  basis.py  benchmark.py  block.py  device.py  diagnostics.py  export.py  geometry.py  learnable.py  lightning.py  linalg.py  newton.py  plotting.py  solvers.py  tuning.py  utils.py  vector.py  viz.py
fastlsq/problems/: __init__.py  linear.py  nonlinear.py  regression.py
tests/: test_basic.py  test_benchmarks_inverse.py  test_block.py  test_derivatives.py  test_device.py  test_diagnostics_timing.py  test_grad_shafranov.py  test_grid_swing.py  test_integral.py  test_learnable.py  test_orbit_hill.py  test_projection.py  test_vector_basis.py
