[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fastlsq"
version = "0.1.0"
description = "Solving PDEs in one shot via Fourier features with exact analytical derivatives"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "Antonin Sulc"}]
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0",
    "numpy>=1.24",
    "matplotlib>=3.7",
]

[project.urls]
Paper = "https://arxiv.org/abs/2602.10541"
Repository = "https://github.com/asulc/FastLSQ"

[tool.setuptools.packages.find]
include = ["fastlsq*"]
